# ADVANCED_PROGRAMMING_24_25

./: README.md
Homework01/: README.md  build.sh
Homework01/include/: SparseMatrix.hpp  SparseMatrixCOO.hpp  SparseMatrixCSR.hpp
Homework01/src/: SparseMatrixCOO.cpp  SparseMatrixCSR.cpp  main.cpp
Homework02/: README.md  ScientificToolbox.py  requirements.txt
Homework02/apps/Integration/: CustomIntegration.cpp  Makefile  run_integration.sh
Homework02/apps/custom/: Custom_analysis.cpp  Makefile  run_custom_analysis.sh
Homework02/apps/student_analysis/: Makefile  Student_analysis.cpp  run_analysis.sh
Homework02/output/integration/: IntegrationResult.txt
Homework02/output/statistics/: Cleaned_Students_Performance_results.txt
Homework02/src/integration/: Integration.cpp  Integration.hpp  Makefile
Homework02/src/statistics/: CSVParser.cpp  CSVParser.hpp  Makefile  Statistics.cpp  Statistics.hpp
Homework03/: CMakeLists.txt  README.md  requirements.txt
Homework03/notebooks/: A01_notebook_integration.ipynb  A02_notebook_statistics.ipynb
Homework03/src/: CMakeLists.txt
Homework03/src/bindings/: binding_CSVParser.cpp  binding_integration.cpp  binding_statistics.cpp  main_binding.cpp
Homework03/src/integration/: Integration.cpp  Integration.hpp
Homework03/src/statistics/: CSVParser.cpp  CSVParser.hpp  CellType.hpp  Statistics.cpp  Statistics.hpp
final_exam/: CMakeLists.txt  README.md  build_project.sh  main.py  run_test_source.sh
final_exam/music_library/: Album.hpp  Database.hpp  MusicEntity.hpp  Playlist.hpp  Song.hpp  bindings.cpp  main.cpp
(+23 files in other folders)
